# near-cli-rs-instance

./: Cargo.toml  README.md
.github/workflows/: test.yml
docs/: GUIDE.ru.md
src/: common.rs  config.rs  main.rs
src/commands/: mod.rs
src/commands/account/: mod.rs
src/commands/account/add_key/: mod.rs
src/commands/account/add_key/access_key_type/: mod.rs
src/commands/account/add_key/autogenerate_new_keypair/: mod.rs
src/commands/account/add_key/full_access_type/: mod.rs
src/commands/account/add_key/use_manually_provided_seed_phrase/: mod.rs
src/commands/account/add_key/use_public_key/: mod.rs
src/commands/account/create_implicit_account/: mod.rs
src/commands/account/create_subaccount/: mod.rs
src/commands/account/delete_account/: mod.rs
src/commands/account/delete_key/: mod.rs
src/commands/account/import_account/: mod.rs
src/commands/account/list_keys/: mod.rs
src/commands/account/view_account_summary/: mod.rs
src/commands/config/: mod.rs
src/commands/config/add_connection/: mod.rs
src/commands/config/delete_connection/: mod.rs
src/commands/contract/: mod.rs
src/commands/contract/call_function/: mod.rs
src/commands/contract/deploy/: mod.rs
src/commands/contract/download_wasm/: mod.rs
src/commands/tokens/: mod.rs
src/commands/tokens/send_ft/: mod.rs
src/commands/tokens/send_near/: mod.rs
src/commands/tokens/send_nft/: mod.rs
src/commands/tokens/view_ft_balance/: mod.rs
src/commands/tokens/view_near_balance/: mod.rs
src/commands/tokens/view_nft_assets/: mod.rs
src/commands/transaction/: mod.rs
src/commands/transaction/construct_transaction/: mod.rs
src/commands/transaction/view_status/: mod.rs
src/network_for_transaction/: mod.rs
src/network_view_at_block/: mod.rs
src/transaction_signature_options/: mod.rs
src/transaction_signature_options/sign_with_keychain/: mod.rs
src/transaction_signature_options/sign_with_ledger/: mod.rs
src/transaction_signature_options/sign_with_private_key/: mod.rs
(+27 files in other folders)
