[package]
name = "near-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }

dialoguer = "0.9"
# strum = "0.20"
strum = { git = "https://github.com/frol/strum", branch = "feat/discriminants-pass-through-attributes", features = ["derive"] }
strum_macros = "0.20"
smart-default = "0.6.0"
derive_more = "0.99.9"

async-recursion = "0.3.2"

tokio = { version = "1.0", features = [ "rt", "time" ] }
# Ad-hoc fix for compilation errors (rustls is used instead of openssl to ease the deployment avoiding the system dependency on openssl)
openssl = { version = "0.10", features = [ "vendored" ] }

base64 = "0.12.3"
bip39 = { version = "1.0.0", features = [ "rand" ] }
bs58 = "0.3"
ed25519-dalek = { version = "1" }
hex = "0.4.2"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
toml = "0.5.9"
dirs = "3.0"
shellexpand = "2.1.0"
slip10 = "0.4.3"
url = { version = "2", features = ["serde"] }
open = "2"
shell-words = "1.0.0"
cargo-util = "0.1.1"

color-eyre = "0.6"

near-ledger = { version = "0.1.1", optional = true }

near-crypto = "0.14"
near-primitives = "0.14"
near-jsonrpc-client = "0.4.0-beta.0"
near-jsonrpc-primitives = "0.14"

interactive_clap = { git = "https://github.com/FroVolod/interactive-clap", rev="285b302a8147069f715e2ce9999bda38b8a53797" }
interactive_clap_derive = { git = "https://github.com/FroVolod/interactive-clap", rev="285b302a8147069f715e2ce9999bda38b8a53797" }
# interactive_clap = { path = "/Users/frovolod/Documents2/Rust/hello-macro/macro-proba/interactive_clap" }
# interactive_clap_derive = { path = "/Users/frovolod/Documents2/Rust/hello-macro/macro-proba/interactive_clap/interactive_clap_derive" }


[features]
default = ["ledger"]
ledger = ["near-ledger"]
